templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: ieopetclinic
  name: ieopetclinic
  namespace: pt-ieopetclinic 
spec:
  host: ieopetclini-pt-ieopetclinic.apps.gmeghnag.emeashift.support
  port:
    targetPort: 8080
  to:
    kind: Service
    name: ieopetclinic
    weight: 100
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
